# uAmp

./: .gitignore  CMakeLists.txt  README.md  test_playlist.m3u  uamp
3dparty/: CMakeLists.txt
3dparty/lib1/: CMakeLists.txt
app/: main.cpp
app/res/themes/: darkTheme.qss
app/res/tmp/: playlist  window
app/src/: AudioFile.cpp  AudioFile.h  CMakeLists.txt  ImageEdit.cpp  ImageEdit.h  Playlist.cpp  Playlist.h  ProgressBar.cpp  ProgressBar.h  TagEditor.cpp  TagEditor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  q_includes.h
example_playlists/: correct.jplaylst  correct.m3u
